get by id direction endpoint
